--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           <nav class="header__right">
 
             <div class="dropdown__menu">
-                <button class="btn__dropdown"><img class="img__header__check" src="img/menu.svg" alt="menu" /></button>
+                <input id="btn__dropdown" type="checkbox">
+                <label for="btn__dropdown" class="btn__dropdown"><img class="img__header__check" src="img/menu.svg" alt="menu" /></label>
                 <div class="dropdown__menu__content">
                     <h3 class="dropdown__menu__title">MENU</h3>
                     <ul class="title_menu">
