--- a/index_produrt.html
+++ b/index_produrt.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seo & Digital Marketing Landing Page</title>
+    <title>Seo & Digital Marketing product</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
     <header class="header center">
       <div class="header__logo center">
         <div class="header__logo_left">
-          <a class="header__img__link" href="../landing_page/index.html">
+          <a class="header__img__link" href="index.html">
             <img
               src="img/logo_header_left.svg"
               alt="logo"
@@ -39,75 +39,38 @@
         </div>
         <nav class="header__right">
           <div class="dropdown__menu">
-            <button class="dropdown__menu__btn">
-              <img class="img__header__check" src="img/menu.svg" alt="menu" />
-            </button>
+            <input id="btn__dropdown" type="checkbox">
+            <label for="btn__dropdown" class="btn__dropdown"><img class="img__header__check" src="img/menu.svg" alt="menu" /></label>
             <div class="dropdown__menu__content">
-              <h3 class="dropdown__menu__title">MENU</h3>
-              <ul class="title_menu">
-                <li class="title_name">
-                  <a class="title_name__link" href="#">MAN</a>
-                </li>
-                <ul class="menu__section">
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Accessories</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Bags</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Denim</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">T-Shirts</a>
-                  </li>
+                <h3 class="dropdown__menu__title">MENU</h3>
+                <ul class="title_menu">
+                    <li class="title_name"><a class="title_name__link" href="#">MAN</a></li>
+                        <ul class="menu__section">
+                            <li class="name__section"><a href="#" class="name__section__link">Accessories</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">Bags</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">Denim</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">T-Shirts</a></li>
+                            </ul>
+                    <li class="title_name"><a class="title_name__link" href="#">WOMAN</a></li>
+                        <ul class="menu__section">
+                            <li class="name__section"><a href="#" class="name__section__link">Accessories</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">Jackets & Coats</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">Polos</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">T-Shirts</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">Shirts</a></li>
+                        </ul>
+                    <li class="title_name"><a class="title_name__link" href="#">KIDS</a></li>
+                        <ul class="menu__section">
+                            <li class="name__section"><a href="#" class="name__section__link">Accessories</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">Jackets & Coats</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">Polos</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">T-Shirts</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">Shirts</a></li>
+                            <li class="name__section"><a href="#" class="name__section__link">Bags</a></li>
+                        </ul>
                 </ul>
-                <li class="title_name">
-                  <a class="title_name__link" href="#">WOMAN</a>
-                </li>
-                <ul class="menu__section">
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Accessories</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Jackets & Coats</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Polos</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">T-Shirts</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Shirts</a>
-                  </li>
-                </ul>
-                <li class="title_name">
-                  <a class="title_name__link" href="#">KIDS</a>
-                </li>
-                <ul class="menu__section">
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Accessories</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Jackets & Coats</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Polos</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">T-Shirts</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Shirts</a>
-                  </li>
-                  <li class="name__section">
-                    <a href="#" class="name__section__link">Bags</a>
-                  </li>
-                </ul>
-              </ul>
             </div>
-          </div>
+        </div>
           <a class="header__link-site" href="#"
             ><img src="img/reg.svg" alt="reg"
           /></a>
