--- a/index_cart.html
+++ b/index_cart.html
@@ -95,7 +95,8 @@
                         <li class="product__cart__item">Price: <span class="product__cart__item__pink">$300</span></li>
                         <li class="product__cart__item">Color: <span class="product__cart__item__grey">Red</span></li>
                         <li class="product__cart__item">Size: <span class="product__cart__item__grey">Xl</span></li>
-                        <li class="product__cart__item">Quantity: <p class="product__cart__item__col">2</p></li>
+                        <li class="product__cart__item "><label for="products_col">Quantity:</label><input class="product__cart__item__col" id="products_col" type="number" min="1">
+                        </li>
                     </ul>
                 </div>
                 <div class="product__cart__close">
@@ -113,7 +114,8 @@
                       <li class="product__cart__item">Price: <span class="product__cart__item__pink">$300</span></li>
                       <li class="product__cart__item">Color: <span class="product__cart__item__grey">Red</span></li>
                       <li class="product__cart__item">Size: <span class="product__cart__item__grey">Xl</span></li>
-                      <li class="product__cart__item">Quantity: <p class="product__cart__item__col">2</p></li>
+                      <li class="product__cart__item "><label for="products_col">Quantity:</label><input class="product__cart__item__col" id="products_col" type="number" min="1">
+                      </li>
                   </ul>
               </div>
               <div class="product__cart__close">
@@ -131,8 +133,8 @@
               <input class="checkout__input checkout__input1" placeholder="Bangladesh" type="text">
               <input class="checkout__input checkout__input2" placeholder="State" type="text">
               <input class="checkout__input checkout__input3" placeholder="Postcode / Zip" type="text">
-              <input class="checkout__input checkout__input4" placeholder="GET A QUOTE" type="text">
             </form>
+            <button class="checkout__btn">GET A QUOTE</button>
           </div>
           <div class="checkout__proceed">
             <p class="checkout__sub">SUB TOTAL &emsp;&emsp;$900</p>
