--- a/index_registration.html
+++ b/index_registration.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seo & Digital Marketing CART</title>
+    <title>Seo & Digital Marketing REGISTRATION</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -91,69 +92,42 @@
       </div>
     </header>
     <nav class="breadcrumb center">
-      <a class="breadcrumb__subtitle" href="#">SHOPPING CART</a>
+        <a class="breadcrumb__subtitle" href="#">REGISTRATION</a>
     </nav>
-    <div class="card__checkout center">
-        <div class="product__cart">
-            <div class="product__cart__card">
-                <img src="img/product3.png" alt="product">
-                <div class="product__cart__text">
-                    <h2 class="product__cart__subtitle"><p>MANGO PEOPLE <nobr>T-SHIRT</nobr></p></h2>
-                    <ul class="product__cart__description">
-                        <li class="product__cart__item">Price: <span class="product__cart__item__pink">$300</span></li>
-                        <li class="product__cart__item">Color: <span class="product__cart__item__grey">Red</span></li>
-                        <li class="product__cart__item">Size: <span class="product__cart__item__grey">Xl</span></li>
-                        <li class="product__cart__item "><label for="products_col">Quantity:</label><input class="product__cart__item__col" id="products_col" type="number" min="1">
-                        </li>
-                    </ul>
+    <div class="registration center">
+        <div class="contact-info">
+            <form action="#" class="contact-info__form">
+                <h2 class="contact-info__name">Your Name</h2>
+                <input type="text" placeholder="First Name" class="contact-info__input">
+                <input type="text" placeholder="Last Name" class="contact-info__input">
+                <div class="contact-info__radio">
+                    <input id="male" class="contact-info__gender" name="geder" type="radio">
+                    <label for="male">Male</label>
+                    <input id="female" class="contact-info__gender" name="geder" type="radio">
+                    <label for="female">Female</label>
                 </div>
-                <div class="product__cart__close">
-                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none"         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z" fill="#575757"/>
+                <h2 class="contact-info__name">Login details</h2>
+                <input type="email" placeholder="Email" class="contact-info__input">
+                <input type="password" placeholder="Password" class="contact-info__input">
+                <p class="contact-info__text">Please use 8 or more characters, with at least 1 number and a mixture of uppercase and lowercase letters</p>
+                <button class="contact-info_btn">JOIN NOW
+                    <svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.54 0.208095C11.6058 0.142131 11.684 0.0897967 11.77 0.0540883C11.8561 0.01838 11.9483 0 12.0415 0C12.1347 0 12.2269 0.01838 12.313 0.0540883C12.399 0.0897967 12.4772 0.142131 12.543 0.208095L16.7929 4.458C16.8589 4.5238 16.9112 4.60196 16.9469 4.68802C16.9826 4.77407 17.001 4.86632 17.001 4.95949C17.001 5.05266 16.9826 5.14491 16.9469 5.23097C16.9112 5.31702 16.8589 5.39518 16.7929 5.46098L12.543 9.71089C12.41 9.84389 12.2296 9.91861 12.0415 9.91861C11.8534 9.91861 11.673 9.84389 11.54 9.71089C11.407 9.57788 11.3323 9.39749 11.3323 9.2094C11.3323 9.0213 11.407 8.84091 11.54 8.70791L15.2898 4.95949L11.54 1.21107C11.474 1.14528 11.4217 1.06711 11.386 0.981059C11.3503 0.895005 11.3319 0.802752 11.3319 0.709584C11.3319 0.616415 11.3503 0.524162 11.386 0.438109C11.4217 0.352055 11.474 0.273891 11.54 0.208095Z" fill="white"/>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0 4.95948C0 4.77162 0.0746263 4.59146 0.207462 4.45862C0.340297 4.32579 0.52046 4.25116 0.708318 4.25116H15.583C15.7708 4.25116 15.951 4.32579 16.0838 4.45862C16.2167 4.59146 16.2913 4.77162 16.2913 4.95948C16.2913 5.14734 16.2167 5.3275 16.0838 5.46033C15.951 5.59317 15.7708 5.6678 15.583 5.6678H0.708318C0.52046 5.6678 0.340297 5.59317 0.207462 5.46033C0.0746263 5.3275 0 5.14734 0 4.95948Z" fill="white"/>
                     </svg>
-                        
-                </div>
-            </div> 
-            <div class="product__cart__card">
-              <img src="img/product7.png" alt="product">
-              <div class="product__cart__text">
-                  <h2 class="product__cart__subtitle"><p>MANGO PEOPLE <nobr>T-SHIRT</nobr></p></h2>
-                  <ul class="product__cart__description">
-                      <li class="product__cart__item">Price: <span class="product__cart__item__pink">$300</span></li>
-                      <li class="product__cart__item">Color: <span class="product__cart__item__grey">Red</span></li>
-                      <li class="product__cart__item">Size: <span class="product__cart__item__grey">Xl</span></li>
-                      <li class="product__cart__item "><label for="products_col">Quantity:</label><input class="product__cart__item__col" id="products_col" type="number" min="1">
-                      </li>
-                  </ul>
-              </div>
-              <div class="product__cart__close">
-                  <svg width="18" height="18" viewBox="0 0 18 18" fill="none"         xmlns="http://www.w3.org/2000/svg">
-                      <path d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z" fill="#575757"/>
-                  </svg>
-                      
-              </div>
-          </div> 
-          <div class="cart__btn__box center">
-            <button class="cart__btn">CLEAR&nbspSHOPPING&nbspCART</button>
-            <button class="cart__btn">CONTINUE&nbspSHOPPING</button>
-          </div>
-        </div>
-        <div class="checkout">
-          <div class="checkout__adress">
-            <form class="checkout__form" action="#">
-              <h2 class="checkout__title">SHIPPING ADRESS</h2>
-              <input class="checkout__input checkout__input1" placeholder="Bangladesh" type="text">
-              <input class="checkout__input checkout__input2" placeholder="State" type="text">
-              <input class="checkout__input checkout__input3" placeholder="Postcode / Zip" type="text">
+                    </button>
             </form>
-            <button class="checkout__btn">GET A QUOTE</button>
-          </div>
-          <div class="checkout__proceed">
-            <p class="checkout__sub">SUB TOTAL &emsp;&emsp;$900</p>
-            <p class="checkout__grand">GRAND TOTAL<span class="checkout__grand__price">$900</span></p>
-            <hr class="checkout__band">
-            <button class="checkout_btn">PROCEED TO CHECKOUT</button>
-          </div>
+        </div>
+        <div class="loyalty">
+            <h2 class="loyalty__subtitle">LOYALTY HAS ITS PERKS</h2>
+            <p class="loyalty__text">Get in on the loyalty program where you can earn points and unlock serious perks. Starting with these as soon as you join:</p>
+            <ul class="loyalty__list">
+                <li class="loyalty_item">15% off welcome offer</li>
+                <li class="loyalty_item">Free shipping, returns and exchanges on all orders</li>
+                <li class="loyalty_item">$10 off a purchase on your birthday</li>
+                <li class="loyalty_item">Early access to products</li>
+                <li class="loyalty_item">Exclusive offers & rewards</li>
+            </ul>
         </div>
     </div>
     <section class="top__photo-subscribe center">
@@ -201,15 +175,13 @@
                 />
               </clipPath>
             </defs></svg></a>
-        <a href="#" class="link"
-          ><svg
+        <a href="#" class="link"><svg
             class="svg__footer"
             xmlns="http://www.w3.org/2000/svg"
             width="13"
             height="16"
             viewBox="0 0 13 16"
-            fill="none"
-          >
+            fill="none">
             <g clip-path="url(#clip0_4203_185)">
               <path
                 d="M6.74017 0.203125C3.55549 0.203125 0.408051 2.34063 0.408051 5.8C0.408051 8 1.63723 9.25 2.38218 9.25C2.68948 9.25 2.8664 8.3875 2.8664 8.14375C2.8664 7.85313 2.13076 7.23438 2.13076 6.025C2.13076 3.5125 4.03039 1.73125 6.48875 1.73125C8.60256 1.73125 10.167 2.94062 10.167 5.1625C10.167 6.82187 9.50581 9.93437 7.36407 9.93437C6.59118 9.93437 5.93003 9.37187 5.93003 8.56563C5.93003 7.38438 6.74948 6.24062 6.74948 5.02187C6.74948 2.95312 3.83484 3.32812 3.83484 5.82812C3.83484 6.35313 3.90003 6.93437 4.13283 7.4125C3.70448 9.26875 2.82915 12.0344 2.82915 13.9469C2.82915 14.5375 2.91296 15.1188 2.96883 15.7094C3.07437 15.8281 3.0216 15.8156 3.18301 15.7563C4.74741 13.6 4.69154 13.1781 5.39925 10.3562C5.78104 11.0875 6.7681 11.4812 7.55031 11.4812C10.8467 11.4812 12.3273 8.24688 12.3273 5.33125C12.3273 2.22813 9.66412 0.203125 6.74017 0.203125Z"
